<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:padding="20dp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/vas_logo" />

    <LinearLayout
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginBottom="40dp"
        android:background="@drawable/line"
        android:nextFocusDown="@id/edtPassword"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accountLogin"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="end"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone"
        android:background="@drawable/line"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtPass"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="end"
            android:hint="@string/txtPassw"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:lines="1"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/buttonshape"
        android:fontFamily="sans-serif"
        android:text="@string/btnLogin"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />
    <Button
        android:id="@+id/btnConfig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/buttonshape4"
        android:fontFamily="sans-serif"
        android:text="@string/Config"
        android:textColor="@color/colorOrange"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnConfig"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/txtTag" />

    <TextView
        android:id="@+id/responseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text=""
        android:textColor="@android:color/holo_red_light" />
</RelativeLayout>