<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorOrange">

        <TextView
            android:id="@+id/toolbarTitle"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Do Some Thing"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:src="@drawable/ic_arrow_back_black_24dp" />
    </com.google.android.material.appbar.MaterialToolbar>
    <LinearLayout
        android:id="@+id/Parent_1"
        android:layout_below="@id/toolbar_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/colorBlack"
                    android:text="@string/platenumber"
                    android:layout_marginStart="5dp"
                    android:padding="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:layout_marginStart="5dp"
                android:padding="5dp"
                android:text="@string/vehicle"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/edtPlateNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@drawable/buttonshape3" />
            <TextView
                android:id="@+id/edtTypeText"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/buttonshape3"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_NameDriver"
        android:layout_below="@+id/Parent_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/namedriver"/>
    <EditText
        android:id="@+id/edt_NameDriver"
        android:layout_below="@id/tv_NameDriver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonshape3"
        android:inputType="text"
        android:textColorHint="@null"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"/>
    <TextView
        android:id="@+id/tv_IdentityCard"
        android:layout_below="@+id/edt_NameDriver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/identitycard"/>
    <EditText
        android:layout_below="@id/tv_IdentityCard"
        android:id="@+id/edt_IdentityCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:gravity="center"
        android:textColorHint="@null"
        android:background="@drawable/buttonshape3"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"/>
    <TextView
        android:id="@+id/tv_Delivery"
        android:layout_below="@+id/edt_IdentityCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/delivery_received"/>
    <Spinner
        android:layout_below="@id/tv_Delivery"
        android:id="@+id/edt_Delivery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonshape3"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"/>
    <TextView
        android:id="@+id/tv_Port"
        android:layout_below="@+id/edt_Delivery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/port"/>
    <Spinner
        android:layout_below="@+id/tv_Port"
        android:id="@+id/edt_Port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonshape3"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"/>
    <TextView
        android:id="@+id/tv_Note"
        android:layout_below="@+id/edt_Port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/note"/>
   <EditText
        android:id="@+id/edt_Note"
        android:layout_below="@+id/tv_Note"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="5dp"
        android:inputType="textLongMessage"
        android:layout_margin="5dp"
        android:gravity="start"
        android:background="@drawable/buttonshape5"/>
    <Button
        android:id="@+id/btnReadNFC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_Note"
        android:layout_marginTop="15dp"
        android:layout_margin="14dp"
        android:text="@string/scanRFID"
        android:textColorHint="@null"
        android:textColor="@color/colorWhite"
        android:background="@drawable/buttonshape"/>
</RelativeLayout>