<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_AddKL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorOrange">

        <TextView
            android:id="@+id/toolbarTitle_AddKL"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Do Some Thing"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:src="@drawable/ic_arrow_back_black_24dp" />
    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:id="@+id/scrollView_KL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_AddKL"
        android:scrollbars="vertical">

        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <TextView
                android:id="@+id/content1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:padding="5dp"
                android:text="@string/scaleticketcode"
                android:textColor="@color/colorBlack"/>
            <TextView
                android:id="@+id/tv_MaPhieu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/content1"
                android:gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/buttonshape3" />
            <TextView
                android:id="@+id/content2"
                android:layout_below="@+id/tv_MaPhieu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:padding="5dp"
                android:text="@string/Inhout"
                android:textColor="@color/colorBlack"/>
            <TextView
                android:id="@+id/tv_GioVao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/content2"
                android:gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/buttonshape3" />
            <LinearLayout
                android:id="@+id/contentLoaiXe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_GioVao"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/colorBlack"
                    android:text="@string/platenumber"
                    android:layout_marginStart="5dp"
                    android:padding="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/colorBlack"
                    android:layout_marginStart="5dp"
                    android:padding="5dp"
                    android:text="@string/vehicle"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/tv_LoaiXe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/contentLoaiXe"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/edtPlateNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/buttonshape3" />
                <TextView
                    android:id="@+id/edtTypeText"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_margin="5dp"
                    android:background="@drawable/buttonshape3"/>
            </LinearLayout>
            <RelativeLayout
                android:id="@+id/tv_StatusThongBao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_below="@+id/tv_LoaiXe"
                android:visibility="gone">
                <TextView
                    android:id="@+id/conTentList"
                    android:layout_width="wrap_content"
                    android:text="Lịch sử cập nhật: "
                    android:layout_height="wrap_content"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/listStatusThongBao"
                    android:layout_below="@+id/conTentList"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:background="@null"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
            <TextView
                android:id="@+id/contentTapChat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_StatusThongBao"
                android:layout_marginStart="5dp"
                android:padding="15dp"
                android:gravity="center"
                android:text="@string/TapChat"
                android:textSize="27sp"
                android:textColor="@color/colorBlack"/>
            <TextView
                android:id="@+id/tv_TruKG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/contentTapChat"
                android:textColor="@color/colorBlack"
                android:text="@string/TruTapChat"
                android:layout_marginStart="5dp"
                android:padding="5dp"/>
            <EditText
                android:id="@+id/edt_TruKG"
                android:layout_below="@+id/tv_TruKG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:layout_margin="5dp"
                android:background="@drawable/buttonshape3"/>
            <TextView
                android:id="@+id/tv_TruPhanTram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_TruKG"
                android:textColor="@color/colorBlack"
                android:text="@string/TruPhanTram"
                android:layout_marginStart="5dp"
                android:padding="5dp"/>
            <EditText
                android:id="@+id/edt_TruPhanTram"
                android:layout_below="@+id/tv_TruPhanTram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/buttonshape3"/>
            <TextView
                android:id="@+id/tv_Note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_TruPhanTram"
                android:textColor="@color/colorBlack"
                android:text="@string/note"
                android:layout_marginStart="5dp"
                android:padding="5dp"/>
            <EditText
                android:id="@+id/edt_Note"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="top"
                android:layout_below="@+id/tv_Note"
                android:inputType="text"
                android:layout_margin="5dp"
                android:background="@drawable/buttonshape5"/>
            <TextView
                android:id="@+id/contentPhanBo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_Note"
                android:layout_marginStart="5dp"
                android:padding="15dp"
                android:gravity="center"
                android:text="@string/PhanBo"
                android:textSize="27sp"
                android:textColor="@color/colorBlack"/>

            <LinearLayout
                android:id="@+id/btn_Radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/contentPhanBo"
                android:layout_centerInParent="true"
                android:orientation="horizontal">
                <RadioGroup
                    android:id="@+id/rg_radionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/rd_SaLan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/SaLan" />
                    <RadioButton
                        android:id="@+id/rd_2Cont"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:text="@string/Cont2" />
                    <RadioButton
                        android:id="@+id/rd_1Cont"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:text="@string/Cont1" />
                    <RadioButton
                        android:id="@+id/rd_XeThuong"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/XeThuong" />
                </RadioGroup>
            </LinearLayout>
                <EditText
                    android:id="@+id/inputContent1"
                    android:layout_below="@+id/btn_Radio"
                    android:layout_margin="5dp"
                    android:layout_width="500dp"
                    android:layout_centerVertical="true"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:gravity="center"
                    android:hint="Số cont 1"
                    android:background="@drawable/buttonshape3" />
                <EditText
                    android:id="@+id/inputContent2"
                    android:layout_margin="5dp"
                    android:layout_below="@id/inputContent1"
                    android:layout_width="500dp"
                    android:layout_centerVertical="true"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_marginTop="10dp"
                    android:hint="Số cont 2"
                    android:gravity="center"
                    android:background="@drawable/buttonshape3" />
                <RadioGroup
                    android:id="@+id/rd_Container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/inputContent2"
                    android:visibility="gone"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/rd_20feet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="cont 20 feet" />
                    <RadioButton
                        android:id="@+id/rd_40feet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginRight="10dp"
                        android:text="cont 40 feet" />
                </RadioGroup>
            <LinearLayout
                android:id="@+id/contentBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rd_Container"
                android:layout_margin="10dp"
                android:layoutDirection="rtl"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btnAddNew"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:layout_marginRight="25dp"
                    android:background="@drawable/buttonshape6"
                    android:drawableLeft="@drawable/ic_baseline_add_circle_outline_24"
                    android:text="@string/ThemMoi"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ListVatTu"
                android:layout_below="@+id/contentBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btnSaveTemp"
                android:layout_below="@+id/ListVatTu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_margin="5dp"
                android:text="Lưu tạm"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:background="@drawable/buttonshape6"/>
            <Button
                android:id="@+id/btnSave"
                android:layout_below="@+id/btnSaveTemp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="30dp"
                android:layout_margin="5dp"
                android:text="@string/Luu"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:background="@drawable/buttonshape7"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>